syntax = "proto3";

package storage;

import "google/protobuf/empty.proto";

message FileMetadata {
  optional string id = 1;
  string name = 2;
  string type = 3;
  uint32 size = 4;
}

message FileChunk { bytes chunk = 1; }

message CreateFileRequest {
  FileMetadata metadata = 1;
  FileChunk chunk = 2;
}

message DownloadFileRequest { string id = 1; }

message FileMetadataRequest {
  oneof request {
    string id = 1;
    string name = 2;
  }
}

message DeleteFileRequest { string id = 1; }

message FileExistsResponse { bool exists = 1; }

service StorageService {
  rpc CreateFile(stream CreateFileRequest) returns (FileMetadata);
  rpc DownloadFile(DownloadFileRequest) returns (stream FileChunk);
  rpc GetFileMetadata(FileMetadataRequest) returns (FileMetadata);
  rpc DeleteFile(DeleteFileRequest) returns (google.protobuf.Empty);
  rpc FileExists(FileMetadataRequest)
      returns (FileExistsResponse); // method to validate if a file exists
}